Modernizing. Javax -> Jakarta. JPA 3.2. Better modules. Better bugfixes. Lots of bugfixes and improvements.